--- a/convtu5.sh.1
+++ b/convtu5.sh.1
@@ -1,8 +1,8 @@
 .Dd May 1, 2023
-.Dt UTF5.SH 1
+.Dt CONVU5.SH 1
 .Os
 .Sh NAME
-.Nm utf5.sh
+.Nm convu5.sh
 .Nd Convert UTF-8 to UTF-5
 .Sh SYNOPSIS
 .Nm
