Modified convfu5.m4, convtu5.sh.1 but IDK what

--- a/convtu5.sh.1
+++ b/convtu5.sh.1
@@ -2,11 +2,11 @@
 .Dt CONVU5.SH 1
 .Os
 .Sh NAME
-.Nm convu5.sh
+.Nm convtu5.sh
 .Nd Convert UTF-8 to UTF-5
 .Sh SYNOPSIS
 .Nm
-.Ar FILE
+.Op Ar FILE
 .Sh DESCRIPTION
 The shell script
 .Nm
